<resources>
    <string name="app_name">TrashCache</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="selection_text">What would you like to do?</string>
    <string name="logo_description">Trash Cache Logo</string>
    <string name="btn_photo_search">Take a photo</string>
    <string name="btn_text_search">Look up item</string>
    <string name="btn_item_history">Item History</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btn_location">Recycling Facilities</string>
    <string name="btn_zipCode">Search!</string>
    <string name="app_label">TrashCache</string>
    <string name="already_have_account">Already have an account? Login!</string>
    <string name="button_register">Register</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="back_to_registration">Don\'t have an account? Register!</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="navigation_drawer_open">Open Nav</string>
    <string name="navigation_drawer_close">Close Nav</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Item</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
=======
    <string name="title_activity_recycle_information">RecycleInformation</string>
>>>>>>> Omar
</resources>
