<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <android.support.v7.widget.CardView
            android:id="@+id/search_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:contentPadding="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selection_text"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="left"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_photo_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_photo_search"
                    android:layout_marginBottom="8dp"
                    app:icon="@drawable/ic_photo_camera_white_18dp"
                    app:backgroundTint="@color/colorPrimary"
                    app:iconSize="16dp"
                    style="@style/Widget.MaterialComponents.Button.Icon"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_text_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_search"
                    app:icon="@drawable/ic_search_white_18dp"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:iconSize="16dp"
                    style="@style/Widget.MaterialComponents.Button.Icon"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>